--- a/extension-manifest-v2/_locales/ko/messages.json
+++ b/extension-manifest-v2/_locales/ko/messages.json
@@ -650,6 +650,9 @@
 	"panel_signin_success": {
 		"message": "현재 다음 ID로 로그인되어 있습니다  "
 	},
+	"panel_signin_premium_benefits": {
+		"message": "Ghostery Midnight 앱에서 VPN 서비스, 장치 전반에 걸친 개인정보 보호 기능을 비롯한 Premium 혜택을 무료로 체험할 수 있습니다."
+	},
 	"panel_view_trackers": {
 		"message": "트래커 보기 "
 	},
@@ -701,8 +704,8 @@
 	"panel_detail_menu_rewards_title": {
 		"message": "Rewards"
 	},
-	"panel_detail_menu_premium_title": {
-		"message": "프리미엄 "
+	"panel_detail_learn_more": {
+	  "message": "자세히 알아보기 "
 	},
 	"panel_detail_history_title": {
 		"message": "기록 "
@@ -730,9 +733,6 @@
 	},
 	"panel_detail_rewards_off": {
 		"message": "Ghostery Rewards 기능 끼기"
-	},
-	"panel_detail_premium_title": {
-		"message": "Ghostery 프리미엄 "
 	},
 	"panel_detail_premium_text": {
 		"message": "기능이 곧 제공됩니다."
@@ -1237,6 +1237,9 @@
 	"hub_side_navigation_home": {
 		"message": "홈"
 	},
+	"hub_side_navigation_upgrade_plan": {
+		"message": "요금제 업그레이드"
+	},
 	"hub_side_navigation_tutorial": {
 		"message": "튜토리얼 보기"
 	},
@@ -1293,6 +1296,90 @@
 	},
 	"hub_home_feature_setup_button_alt": {
 		"message": "사용자 지정 설정 완료"
+	},
+	"hub_home_plus_upgrade_text": {
+		"message": "기본 개인정보 보호 이상을 경험해보세요. Ghostery 요금제를 업그레이드하면 장치 전반에 걸친 보호, VPN 연결 등 다양한 혜택이 제공됩니다,"
+	},
+	"hub_home_plus_upgrade_button_text": {
+		"message": "지금 업그레이드"
+	},
+	"hub_home_plus_full_protection": {
+		"message": "완벽하게 보호됩니다."
+	},
+	"hub_upgrade_your": {
+		"message": "보호 서비스"
+	},
+	"hub_upgrade_protection_plan": {
+		"message": "업그레이드"
+	},
+	"hub_upgrade_yearly": {
+		"message": "매년"
+	},
+	"hub_upgrade_monthly": {
+		"message": "매월"
+	},
+	"hub_upgrade_plan_free": {
+		"message": "무료"
+	},
+	"hub_upgrade_already_protected": {
+		"message": "이미 보호되고 있음"
+	},
+	"hub_upgrade_basic_protection": {
+		"message": "기본 보호"
+	},
+	"hub_upgrade_basic_browser_protection": {
+		"message": "기본 브라우저 보호"
+	},
+	"hub_upgrade_advanced_device_protection": {
+		"message": "고급형 장치 보호"
+	},
+	"hub_upgrade_maximum_browser_protection": {
+		"message": "최대 브라우저 보호"
+	},
+	"hub_upgrade_to": {
+		"message": "다음으로 업그레이드"
+	},
+	"hub_upgrade_scroll_down": {
+		"message": "기능 전체 목록 보기"
+	},
+	"hub_upgrade_midnight_note": {
+		"message": "Ghostery Midnight를 설치해야 합니다"
+	},
+	"hub_upgrade_additional_protection": {
+		"message": "추가 보호"
+	},
+	"hub_upgrade_browser_tracker_blocking": {
+		"message": "브라우저 트래커 차단"
+	},
+	"hub_upgrade_browser_ad_blocking": {
+		"message": "브라우저 광고 차단"
+	},
+	"hub_upgrade_custom_blocking_preferences": {
+		"message": "차단 정보 맞춤 설정"
+	},
+	"hub_upgrade_extension_themes": {
+		"message": "확장 테마"
+	},
+	"hub_upgrade_historical_extension_stats": {
+		"message": "확장 내역 통계"
+	},
+	"hub_upgrade_application_tracker_blocking": {
+		"message": "애플리케이션 트래커 차단"
+	},
+	"hub_upgrade_application_ad_blocking": {
+		"message": "애플리케이션 광고 차단"
+	},
+	"hub_upgrade_no_vpn_logs": {
+		"message": "VPN 로그 없음"
+	},
+	"hub_upgrade_leak_protection": {
+		"message": "유출 보호"
+	},
+	"hub_upgrade_physical_servers": {
+		"message": "물리 서버"
+	},
+	"hub_upgrade_unlimited_bandwidth": {
+		"message": "무제한 대역폭"
 	},
 	"hub_setup_page_title": {
 		"message": "Ghostery 허브 - 설정"
@@ -2201,9 +2288,6 @@
 	"ghostery_basic": {
 		"message": "Basic"
 	},
-	"ghostery_plus": {
-		"message": "Ghostery Plus"
-	},
 	"dollar_sign": {
 		"message": "&#36;"
 	},
@@ -2212,6 +2296,9 @@
 	},
 	"per_month": {
 		"message": "매월"
+	},
+	"per_year": {
+		"message": "매년"
 	},
 	"faster_cleaner_browsing": {
 		"message": "더욱 신속하고 깔끔한 브라우징",
@@ -2409,5 +2496,8 @@
 	},
 	"no_thanks_continue_with_basic": {
 		"message": "괜찮습니다, Basic으로 계속 진행합니다"
+	},
+	"too_many_password_resets_text": {
+		"message": "암호 재설정을 너무 많이 요청했습니다. 한 시간 후에 다시 시도하세요."
 	}
 }
