wire up unknown tracker whitelisting

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1273,6 +1273,9 @@
 	"android_untrust": {
 		"message": "Undo"
 	},
+	"android_anonymize": {
+		"message": "Anonymize"
+	},
 	"android_anonymized": {
 		"message": "Anonymized"
 	},
