--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -1729,7 +1729,7 @@
 		"message": "Resolve issues fast with our Priority help desk service - and more perks to come"
 	},
 	"hub_supporter_manifesto": {
-		"message": "We strive to deliver the best privacy protection services to our users free of cost. While we do not charge for our browser extension, you may choose to support us through a small monthly subscription. Join us in our mission by upgrading to Ghostery Plus - and unlock cool perks along the way!"
+		"message": "We strive to deliver the best privacy protection services to our users free of cost. While we do not charge for our browser extension, you may choose to support us through a monthly subscription of &#36;4.99. Join us in our mission by upgrading to Ghostery Plus - and unlock cool perks along the way!"
 	},
 	"hub_supporter_feature_theme_description": {
 		"message": "Customize the Ghostery colors for a new visual experience! Introduced through popular request. Check out our special Dark Blue theme, and more to come."
@@ -1944,7 +1944,7 @@
 		"message": "Themes"
 	},
 	"subscribe_pitch": {
-		"message": "While Ghostery is free, you can choose to support us through a small monthly subscription in exchange for special perks like color themes, personal tracking statistics, and more. Join our mission and subscribe!"
+		"message": "While Ghostery is free, you can choose to support us through a monthly subscription of &#36;4.99 in exchange for special perks, like color themes, personal tracking statistics, and more. Join our mission and subscribe!"
 	},
 	"subscribe_pitch_spring": {
 		"message": "Like what we do? Support us and unlock new spring themes, personal tracking insights, and other special perks by upgrading to Ghostery Plus!"
@@ -2513,7 +2513,7 @@
 		"message": "Try Ghostery Midnight"
 	},
 	"seven_day_free_trial": {
-		"message": "7 Day Free Trial"
+		"message": "7-day free trial"
 	},
 	"spring_is_here": {
 		"message": "Spring is here!"
