--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1041,7 +1041,7 @@
 		"message": "Ghostery Rewards is a private-by-design feature that delivers you discounts and special offers from our partner companies as you browse."
 	},
   	"settings_abtests_tooltip": {
-	  	"message": "Participating in A/B tests helps Ghostery understand which version of a new layout or feature users like you prefer. The testing mechanism uses a random number generated on install to determine which version of a beta feature you see."
+	  	"message": "Participating in randomized A/B tests helps Ghostery understand which version of a new layout or feature users like you prefer."
 	},
 	"settings_opt_in": {
 		"message": "Opt In / Out"
