GH-2159: Update frequency reduction, AB test opt-out, remove Cliqz AB test (#608)
* Reduce scheduledTasks and autoUpdatedBugDb frequencies from once an hour to once a day

* Refactor autoUpdateBugDb so it always does the same thing when called with the same argument

* Update autoUpdateBugDB documentation and refactor a little more to make sure it always does the same thing when called with the same args

* Clean up autoUpdateBugDB a bit more: Clarify docs, flatten, and move log statement to make sure that it is triggered every time the function is called, since the message just says that the function was called

* Minor comment in autoUpdateBugDb

* Renamed autoUpdateBugDb to clarify connection to checkLibraryVersion. Tweak docs.

* Edit db update function names and docs to improve clarity

* Remove Cliqz anti-tracking A/B test config code from background. Tidy up setupAbTest

* Split up and reorganize setupABTest so outside code can only call those parts of the original it actually needs.

* Clean up OptIn a bit in preparation for adding A/B test checkbox

* Finish OptIn tidy-up

* Stub out new A/B test opt-in setting. Add draft strings for it.

* Implement the enable_abtests conf setting and plug it into the checkbox stub in OptIn

* Do not call setupABTests if enable_abtests is false

* Skip the call to the AB server altogether if ab tests are disabled

* Update AB test setting tooltip copy. remove enable_abtests from uninstall URL. Add ts metrics query string param for whether tests are enabled. Disabled sending other AB test query string params unless tests are enabled.

* Remove unused import from Metrics

* Update test snapshot

* Fix typo

* Fix comment errors

* Remove bloom filter Cliqz test

* remove comment

Co-authored-by: Christopher Tino <christopher_tino@yahoo.com>
Co-authored-by: Christopher Tino <4699516+christophertino@users.noreply.github.com>

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -947,6 +947,9 @@
 	"settings_allow_offers": {
 		"message": "Participating in Ghostery Rewards"
 	},
+  	"settings_allow_abtests": {
+	  	"message": "Participating in A/B Tests"
+	},
 	"settings_signin_create_header": {
 		"message": "Sign In / Create Account"
 	},
@@ -1036,6 +1039,9 @@
 	},
 	"settings_offers_tooltip": {
 		"message": "Ghostery Rewards is a private-by-design feature that delivers you discounts and special offers from our partner companies as you browse."
+	},
+  	"settings_abtests_tooltip": {
+	  	"message": "Participating in randomized A/B tests helps Ghostery understand which version of a new layout or feature users like you prefer."
 	},
 	"settings_opt_in": {
 		"message": "Opt In / Out"
